--- a/Zaczy.SongBook.MAUI/Pages/SongDetailsPage.xaml
+++ b/Zaczy.SongBook.MAUI/Pages/SongDetailsPage.xaml
@@ -12,7 +12,13 @@
     BackgroundColor="White"
     Title="{Binding Source={x:Reference Root}, Path=Song.Title}">
 
-    <Grid Padding="12,0,12,0" RowDefinitions="Auto,Auto,Auto,Auto,*" x:DataType="data:SongEntity">
+    <ContentPage.Triggers>
+        <DataTrigger TargetType="ContentPage" Binding="{Binding Source={x:Reference Root}, Path=UserViewModel.LyricsDarkMode}" Value="True">
+            <Setter Property="BackgroundColor" Value="{StaticResource LyricsDarkBackground}" />
+        </DataTrigger>
+    </ContentPage.Triggers>
+    
+    <Grid Padding="{OnIdiom '12,0,12,0', Phone='8,0,6,0'}" RowDefinitions="Auto,Auto,Auto,Auto,*" x:DataType="data:SongEntity">
         <Grid Grid.Row="0" Padding="0,3,0,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="{OnIdiom 20, Tablet=40}" />
@@ -20,7 +26,7 @@
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="{OnIdiom 20, Tablet=40}" />
             </Grid.ColumnDefinitions>
-
+           
             <Button 
                     Grid.Row="0"
                     Grid.Column="0"
@@ -38,16 +44,24 @@
                     IsVisible="True" 
                     Margin="{OnIdiom '-17,-3,0,0', Tablet='-5,-15,0,0'}"
                     />
-                <Label 
-                    x:Name="TitleLabel" 
-                    Grid.Row="0" 
-                    Text="{Binding Title}" 
-                    VerticalOptions="Center"
-                    Grid.Column="1"
-                    FontAttributes="Bold" 
-                    Margin="{OnIdiom 0, Tablet='0,5,0,10'}"
-                    FontSize="{OnIdiom Phone=20, Tablet=24, Desktop=24}"
-                    TextColor="#962610" />
+            <Label 
+                x:Name="TitleLabel" 
+                Grid.Row="0" 
+                Text="{Binding Title}" 
+                VerticalOptions="Center"
+                Grid.Column="1"
+                FontAttributes="Bold" 
+                Margin="{OnIdiom 0, Tablet='0,5,0,10'}"
+                FontSize="{OnIdiom Phone=20, Tablet=24, Desktop=24}"
+                TextColor="#962610" >
+
+                <Label.Triggers>
+                    <DataTrigger TargetType="Label" Binding="{Binding Source={x:Reference Root}, Path=UserViewModel.LyricsDarkMode}" Value="True">
+                        <Setter Property="TextColor" Value="{StaticResource LyricsDarkChords}" />
+                    </DataTrigger>
+                </Label.Triggers>
+
+            </Label>
             <Label 
                 Grid.Row="0" 
                 Grid.Column="2"
