--- a/Zaczy.SongBook.MAUI/Resources/Styles/Colors.xaml
+++ b/Zaczy.SongBook.MAUI/Resources/Styles/Colors.xaml
@@ -13,6 +13,10 @@
     <Color x:Key="SecondaryDarkText">#b68690</Color>
     <Color x:Key="Tertiary">#961610</Color>
 
+    <Color x:Key="LyricsDarkBackground">#222222</Color>
+    <Color x:Key="LyricsDarkText">#777777</Color>
+    <Color x:Key="LyricsDarkChords">#555030</Color>
+
     <Color x:Key="White">White</Color>
     <Color x:Key="Black">Black</Color>
     <Color x:Key="Magenta">#D600AA</Color>
